# Teslatron-control

./: .gitignore  ELECTRICAL_MEASUREMENT_ARCHITECTURE.md  LAB_RUNBOOK.md  README.md  SERVICE_ARCHITECTURE.md  inspect_environment_log.py  pyproject.toml
config/: cryostat.json  cryostat_ethernet.example.json  cryostat_lab_control.json  cryostat_lab_readonly.json  cryostat_mercury.example.json  cryostat_mercury_local_gui.json  cryostat_mock.json  cryostat_standard.example.json  cryostat_standard_local_gui.json  cryostat_tcpip_candidates.json  electrical.mock.example.json  electrical.vdp.example.json  heliox_control.example.json  heliox_local_gui.example.json  heliox_readonly.example.json  vdp_instruments.example.yaml  vdp_measurement_sequences.yaml  vdp_routing_template.yaml  vdp_wiring.example.yaml
data/: .~lock.cryostat_environment_2026-05-11.csv#
data/recipes/: first_recipe.json
docs/: TODO_list.txt  electrical_measurements.md  user_guide.md
docs/manuals/: !cryosys_Heliox.cfg!  HelioxX_cfg
teslatron_services/: __init__.py  __main__.py
teslatron_services/cryostat/: __init__.py  api.py  backends.py  cli.py  config.py  service.py  state.py
teslatron_services/cryostat/static/: app.js  index.html  styles.css
teslatron_services/electrical/: __init__.py  api.py  cli.py  config.py  orchestrator.py  persistence.py  state.py
teslatron_services/electrical/drivers/: base.py  mock.py
tests/: test_cryostat_service.py  test_electrical_service.py  test_electrical_vdp.py  test_mercury_backend.py
tools/: diagnose_mercury.py  inspect_environment_log.py
(+43 files in other folders)
