[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "teslatron-control"
version = "0.1.0"
description = "FastAPI services for controlling a Teslatron cryostat and electrical instrumentation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "pydantic",
  "pyyaml",
  "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
test = [
  "pytest",
]
lab = [
  "pyvisa",
]
analysis = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
